// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0 ez7jpgq0"
  >
    <iframe
      allowfullscreen=""
      class="css-1ispk5u-EmbedBlock ez7jpgq1"
      sandbox=""
      src="https://www.example.com"
      title="Title"
    />
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0 ez7jpgq0"
  >
    <iframe
      allowfullscreen=""
      class="css-1ispk5u-EmbedBlock ez7jpgq1"
      sandbox=""
      src="https://www.example.com"
      title="Title"
    />
  </div>
</DocumentFragment>
`;
